# cosmos-chessbot

./: .env.example  .gitignore  .mcp.json  AGENT_PROMPT.md  BREV_ISAAC_SETUP.md  CLAUDE.md  COLOR_DIVERSITY.md  COSMOS_COOKOFF.md  COSMOS_REASONING_ARCHITECTURE.md  COSMOS_RL_TRAINING.md  DATASET_COMPARISON.md  DEVELOPMENT.md  DUAL_POLICY_GUIDE.md  GPU_SETUP.md  GPU_SETUP_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  LEROBOT_GUIDE.md  NEXT_STEPS.md  QUICKSTART.md  QUICK_START_ISAAC.md  README.md  REMOTE_INFERENCE.md  RENDERING_COMPARISON.md  STATUS.md  TRAINING_GUIDE.md  VERIFICATION_SYSTEM.md  loom.sh  main.py  outbox.md  pi05model_card.md  pyproject.toml
assets/: README.md
config/: dataset_generation.yaml
data/: chess_fen_minimal.jsonl  chess_fen_test.jsonl  chess_fen_train.jsonl  chess_fen_val.jsonl
data/usd/: bishop_b.usd  bishop_w.usd  board.usd  king_b.usd  king_w.usd  knight_b.usd  knight_w.usd  pawn_b.usd  pawn_w.usd  queen_b.usd  queen_w.usd  rook_b.usd  rook_w.usd
docs/: CONFIDENCE_THRESHOLD_OPTIMIZATION.md  COSMOS_FEN_FINETUNING_PLAN.md  COSMOS_REASONING_ARCHITECTURE.md  Cosmos-Reason2_model_card.md  DATASET_READY.md  HYBRID_DATASET.md  ISAAC_SIM_SETUP.md  LEROBOT_GUIDE.md  LLM_FEN_DETECTION.md  VALUE_HYBRID_RESULTS.md  YOLO_DINO_FEN_DETECTION.md  demo_video_script.md  recording_plan.md
models/: .gitignore  README.md
scripts/: collect_episodes.py  compare_policies.py  convert_value_to_llava.py  cosmos_server.py  debug_dataset_processing.py  debug_piece_rendering.py  debug_usd_childnames.py  eval_policy.py  evaluate_model.py  generate_hybrid_dataset.py  generate_value_hybrid_dataset.py  isaac_env_test.py  run_mcp_server.py  run_sim_policy_on_real_robot.py  serve_pi05.py  start_pi05_server.sh  test_chess_env.py  test_fen_detector.py  test_fenify.py  test_finetuned_model.py  test_lc2fen_all.py  test_livechess2fen.py  test_perception.py  test_random_positions.py  test_remote_perception.py  test_stockfish.py  train_chess_rl.py  train_cosmos_chess.py  verify_training_setup.py
scripts/_archive/: debug_piece_rendering2.py  debug_piece_rendering3.py  debug_piece_rendering4.py  debug_piece_rendering5.py  debug_piece_rendering8.py  debug_usd_compare.py
scripts/cosmos_rl/: chess_sft.py
scripts/data/: apply_hud_to_dataset.py  combine_corner_datasets.py  convert_chessboard_dataset.py  convert_chessred2k_corners.py  convert_chessred2k_simple.py  convert_chessred2k_to_yolo.py  convert_llava_to_yolo26.py  convert_llava_to_yolo26_v2.py  convert_synthetic_corners.py  convert_synthetic_pieces.py  download_hdris.sh  generate_chess_dataset.py  generate_value_hybrid_dataset.py  import_stl_chess_set.py  review_hud_episodes.py
scripts/evaluation/: benchmark_fen_detectors.py  eval_policy.py  evaluate_fen_accuracy.py  test_yolo26_baseline.py
scripts/hardware/: calibrate_corners.py  calibrate_so101.py  capture_frame.py  collect_episodes.py  home_robot.py  preview_hud_feed.py  run_lerobot_async.py  run_pi05_episode.py  run_sim_policy_on_real_robot.py
(+93 files in other folders)
