[project]
name = "cosmos-chessbot"
version = "0.1.0"
description = "Cosmos-Reason2 + Stockfish + Pi0.5 chess manipulation orchestrator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "av>=16.1.0",
    "pillow>=12.0.0",
    "transformers>=4.57.3",
    "torch>=2.9.0",
    "torchvision",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
]

# Note: LeRobot has version conflicts with Cosmos (torch<2.8 vs torch>=2.9)
# Install separately in a dedicated environment for data collection
# See LEROBOT_GUIDE.md for setup instructions

[project.scripts]
cosmos-chessbot = "cosmos_chessbot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
